# LightDance-RPi

./: .gitignore  .gitmodules  LED.json  LICENSE  OF.json  README.md  authorized_keys  board_config.json  cli.sh  compile.sh  config  control.json  install.sh  lightdance.config.js  new_rpi.sh  package-lock.json  pm2_setup.sh  requirements.txt  setDancer.sh  setup.sh  start.sh  startCLI.sh  startClient.sh  startController.sh  startNTHUController.sh  tmp.txt  tmuxStart.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml
2023/cmd/system/: LEDtest.cpp  OFtest.cpp  boardInfo.cpp  command.h  play.cpp  reboot.h  shutDown.h  stmInit.cpp
2023/commands/: Makefile
2023/player/: .gitignore  LEDPlayer.cpp  LEDPlayer.h  Makefile  OFPlayer.cpp  OFPlayer.h  fifo  playLoop.cpp  read.cpp  write.cpp
2023/socket/: Makefile  client.cpp  client.py  ntpclient.py  test_server.py
RPIControler/: RPIClient  RPIControler  do1.txt  do2.txt  makefile  myresult  refresult
RPIControler/data/: board_config.json
RPIControler/dofiles/: do1  do2  do3
RPIControler/ref/: RPIControler-ref  do1  do2.txt  refresult
RPIController/: RPIController  makefile
RPIController/data/: control.json  dancer0.json  status.json
RPIController/include/: RPIMgr.h
asset/: LED.json  OF.json
cli/: cli.py  doc.md  startup
client/: .eslintrc.js  .prettierignore  client.py  package-lock.json  package.json
client/src/: DancerSocket.js  RouterSocket.js  RpiSocket.js  client.py
client/test/: test.cpp
cmd/system/: flags.h
controller/: CMakeLists.txt  Makefile  controller
controller/hardware/: Makefile
controller/inc/: EL.h  LED_strip.h  OFrgba_to_rgb.hpp  method.h  ofplayer.h  pca.h  pca9955.h  pca995X.h  pcaDefinition.h  rpiMgr.h  utils.h  utils.hpp
controller/include/: cmdMgr.h  rpiMgr.h  utils.hpp
controller/software/: CMakeLists.txt  Makefile  state_machine_readme.md
controller/software/data/: testName.json
controller/software/inc/: FSM_Common.h  FiniteStateMachine.h  LEDPlayer.h  OFPlayer.h  StateMachine.h  command.h  const.h  machine_tools.h  oriFSM_Common.h  oriStateMachine.h  player.h  state_machine.h  timeval_tools.h  utils.h
controller/software/src/: timeval_tools.cpp
controller/software/src/commands/: FrameTest.cpp  LEDTest.cpp  OFTest.cpp  boardinfo.cpp  list.cpp  load.cpp  partTest.cpp  player.cpp  playerctl.cpp
controller/software/src/player/: FSM_Common.cpp  FiniteStateMachine.cpp  LEDPlayer.cpp  OFPlayer.cpp  StateMachine.cpp  oriFSM_Common.cpp  playLoop.cpp  state_machine.cpp
controller/software/src/socket/: test_server.py
controller/src/: LED_strip.cpp  cmdMgr.cpp  gamma_correction.cpp  ledplayer.cpp  logger.cpp  main.cpp  method.cpp  ofplayer.cpp  pca.cpp  pca9955.cpp  pca995X.cpp  rpiMgr.cpp  utils.cpp
controller_2023/: CMakeLists.txt  Makefile
controller_2023/controller/: CMakeLists.txt
controller_2023/controller/data/: LED.json  OF.json  testName.json
controller_2023/controller/inc/: LEDPlayer.h  OFPlayer.h  player.h
controller_2023/controller/src/commands/: LEDTest.cpp  OFTest.cpp  player.cpp  playerctl.cpp
controller_2023/controller/src/player/: LEDPlayer.cpp  OFPlayer.cpp  playLoop.cpp
controller_2023/hardware/: CMakeLists.txt
controller_2023/hardware/inc/: LEDController.h  OFController.h
controller_2023/hardware/src/: LEDController.cpp  LEDmain_umb.cpp  OFController.cpp  main_umb.cpp
controller_2023/inc/: command.h
data/: LED.json  OF.json  color_palette.py  control.json  control_agent.json  dancer0.json  dummy.json  gen_json.py  gen_json_1min.py  gen_umb_json.py  light-frame.py  status.json  umbrella.py
data/dancers/: 0_test.json  10_lu.json  11_wish.json  12_hourglass_main.json  13_hourglass_bottom.json  14_boxing_glove_left.json  15_boxing_glove_right.json  16_hamer.json  2_ke.json  2_meow.json  3_zhou.json  4_breaKing.json  4_kuang.json  5_itzyboo.json  5_lin.json  6_liao.json  6_yu.json  7_mon.json  7_wang.json  8_fan.json  8_hao.json  9_monkey.json  testName.json
method/: __init__.py  baseMethod.py  blue.py  boardInfo.py  darkall.py  eltest.py  green.py  kick.py  ledtest.py  lightall.py  list.py  load.py  oftest.py  pause.py  play.py  quit.py  reboot.py  red.py  restartController.py  sampleUsage.py  send.py  sendLight.py  shutDown.py  statuslight.py  stmInit.py  stop.py  sync.py  traversal.py  uploadJsonFile.py
method/ntp/: __init__.py  ntpclient.py
nthu_controller/: wire.py
pysocket/: __init__.py  zmq_socket.py
scripts/: build  build-controller  build-controller.sh  build-debug  build-umb  clear  close  fade  free-disk  install  install-umb  install_umb  install_zeromq_mac.sh  install_zeromq_rpi.sh  ip-mon  py_formatter.sh  py_lint.sh  restart  restart-service  set-alias  set-hostname  set-networkd  set-server-ip  set-server-ip.sh  set-service  set-working-environment.sh  startClient.sh  startup  update
socket/: RpiSocketUG.js
system/: client.service  client.service.template  controller.service  frame.service  frame.service.template  ip-mon.service  nthu_controller.service  player.service  player.service.template  startup.service  startup.service.template
test/: reciever.py  statuslight_test.py
test/LED_strip/: Makefile
test/PCA9685_test/: Makefile  PCAtest  PCAtest.cpp  pca9685.h
test/reciever/: CMakeLists.txt  Makefile  receiver.cpp  reciever.py
test_controller/: Makefile  test_cli.py
test_controller/inc/: OFrgba_to_rgb.h  OFrgba_to_rgb.hpp  definition.h  gamma_correction.h  ledplayer.h  logger.h  method.h  ofplayer.h  pca2022.h  pca9955.h  pca9956.h  rpiMgr.h  utils.h
test_controller/src/: LED_strip.cpp  gamma_correction.cpp  ledplayer.cpp  logger.cpp  main.cpp  method.cpp  ofplayer.cpp  pca2022.cpp  pca9955.cpp  pca9956.cpp  rpiMgr.cpp  utils.cpp
utils/: parseDancers.js
wire/: wire.py
ws_client/: Readme.md  broadcast_server.py  client.py  config.py  ntpclient.py  requirements.txt  server.py  test_client.py
ws_client/c++/: Makefile  client.cpp
ws_client/websocket_server/: __init__.py  thread.py  websocket_server.py
(+94 files in other folders)
